feat: finish vue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <style>
       #echarts,
       #g2,
-      #table {
+      #react-table,
+      #vue-table {
         height: 400px;
       }
     </style>
@@ -15,7 +16,8 @@
     <div id="app">
       <div id="echarts">echarts</div>
       <div id="g2">g2</div>
-      <div id="table">table</div>
+      <div id="react-table">react table</div>
+      <div id="vue-table" style="margin-top: 100px">vue table</div>
     </div>
 
     <script src="src/index.ts"></script>
