--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
       #echarts,
       #g2,
       #react-table,
-      #vue-table {
+      #vue-table,
+      #demo-1 {
         height: 400px;
+        margin: 80px 0;
       }
     </style>
   </head>
@@ -18,6 +20,8 @@
       <div id="g2">g2</div>
       <div id="react-table">react table</div>
       <div id="vue-table" style="margin-top: 100px">vue table</div>
+      <p>demos</p>
+      <div id="demo-1"></div>
     </div>
 
     <script src="src/index.ts"></script>
