feat: 主题注册接口

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       #g2,
       #react-table,
       #vue-table,
-      #demo-1 {
+      #demo-1,
+      #demo-2 {
         height: 400px;
         margin: 80px 0;
       }
@@ -22,6 +23,7 @@
       <div id="vue-table" style="margin-top: 100px">vue table</div>
       <p>demos</p>
       <div id="demo-1"></div>
+      <div id="demo-2"></div>
     </div>
 
     <script src="src/index.ts"></script>
